--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href='css/sweetalert.css' rel='stylesheet'/>
 </head>
 <script>
-	window.onload = function () {
+	window.onload = function abc123() {
 
 function copyToClipboard(text) {
 	if (window.clipboardData && window.clipboardData.setData) {
@@ -77,5 +77,7 @@ function(isConfirm){
   <p id="abjad"></p>
   <p id="words"></p>
   <p id="letters"></p>
+		
+<center><img onclick="abc123()" src="pic/abjad_png.png" alt="Ebced Hesapla" width="20" height="12" border="0"></center>
 </body>
 </html>
