--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@ function(isConfirm){
   <p id="words"></p>
   <p id="letters"></p>
 		
-<center><img onclick="abc123()" src="pic/abjad_png.png" alt="Ebced Hesapla" width="20" height="12" border="0"></center>
+<center><a onclick="abc123()"><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></a></center>
 </body>
 </html>
