--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <link href='css/sweetalert.css' rel='stylesheet'/>
 </head>
 <script>
-	window.onload = function abc123() {
+	window.onload = function abc123();
+function abc123(){
 
 function copyToClipboard(text) {
 	if (window.clipboardData && window.clipboardData.setData) {
