--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <link href='css/sweetalert.css' rel='stylesheet'/>
 </head>
 <script>
-	window.onload = function abc123();
-function abc123(){
+	window.onload = function(){
 function copyToClipboard(text) {
 	if (window.clipboardData && window.clipboardData.setData) {
 	return clipboardData.setData("Text", text);
@@ -74,6 +73,6 @@ function(isConfirm){
   <p id="words"></p>
   <p id="letters"></p>
 		
-		<center><a onclick="abc123()"><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></a></center>
+		<center><a value="Refresh Page" onClick="window.location.reload()"><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></a></center>
 </body>
 </html>
