--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
 function Gece(){
 
-var css = 'html {background: black;' +
-'-webkit-filter: invert(100%); '+
+var css = 'html {-webkit-filter: invert(100%); '+
 '-moz-filter: invert(100%); '+
 '-o-filter: invert(100%); '+
 '-ms-filter: invert(100%)}';
