--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
 <link href='css/sweetalert.css' rel='stylesheet'/>
 </head>
 <script>
-
 function Gece(){
-
-var css = 'html {-webkit-filter: invert(100%); '+
+var css = 'html {background: white;' +
+'-webkit-filter: invert(100%); '+
 '-moz-filter: invert(100%); '+
 '-o-filter: invert(100%); '+
 '-ms-filter: invert(100%)}';
-
 var head = document.getElementsByTagName('head')[0];
 var style = document.createElement('style');
-
 if (!window.counter) {
 	window.counter = 1;
 	sessionStorage.setItem("görünüm", "gece");
@@ -31,14 +28,12 @@ if (!window.counter) {
 	if (window.counter == 9) {sessionStorage.setItem("görünüm", "gece"); var css ='html {-webkit-filter: invert(100%); -moz-filter: invert(100%); -o-filter: invert(100%); -ms-filter: invert(100%);}'}
 	if (window.counter == 10) {sessionStorage.removeItem("görünüm"); var css ='html {-webkit-filter: invert(0%); -moz-filter: invert(0%); -o-filter: invert(0%); -ms-filter: invert(0%);}'}
 }
-
 style.type = 'text/css'
 if (style.styleSheet){
 	style.styleSheet.cssText = css;
 } else {
 	style.appendChild(document.createTextNode(css));
 }
-
 head.appendChild(style);
 }
 	
