--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ function(isConfirm){
 	<body>
 <br></br>
 <br></br>
-<center><a value="Refresh Page" onClick="window.location.reload()"><img onmouseover="Gece()" src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></a></center>
+<center><a value="Refresh Page" onClick="window.location.reload()"><img onmouseover="Gece()" onmouseout="Gece()" src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></a></center>
 <br></br>
 Results:
   <p id="abjad"></p>
