--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ swal({
   animation: "slide-from-top",
   inputPlaceholder: "Write something"
 },
-function(inputValue){
+function a(inputValue){
   if (inputValue === false) return false;
   if (inputValue === "") {
     swal.showInputError("You need to write something!");
@@ -96,7 +96,7 @@ function(isConfirm){
 	<body>
 <br></br>
 <br></br>
-<center><a value="Refresh Page" onClick="function(inputValue)"><img onmouseover="Gece()" onmouseout="Gece()" src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></a></center>
+<center><a value="Refresh Page" onClick="function a()"><img onmouseover="Gece()" onmouseout="Gece()" src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></a></center>
 <br></br>
 Results:
   <p id="abjad"></p>
