--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@ function words(string) { return string.split(/\s+/).length }
 function abjad (string) { a = val(string,'a','1'); b = val(string,'b','2'); c = val(string,'c','3'); ç = val(string,'ç','4'); d = val(string,'d','5'); e = val(string,'e','6'); f = val(string,'f','7'); g = val(string,'g','8'); ğ = val(string,'ğ','9'); h = val(string,'h','10'); ı = val(string,'ı','11'); i = val(string,'i','12'); j = val(string,'j','13'); k = val(string,'k','14'); l = val(string,'l','15'); m = val(string,'m','16'); n = val(string,'n','17'); o = val(string,'o','18'); ö = val(string,'ö','19'); p = val(string,'p','20'); r = val(string,'r','21'); s = val(string,'s','22'); ş = val(string,'ş','23'); t = val(string,'t','24'); u = val(string,'u','25'); ü = val(string,'ü','26'); v = val(string,'v','27'); y = val(string,'y','28'); z = val(string,'z','29');
 return a+b+c+ç+d+e+f+g+ğ+h+ı+i+j+k+l+m+n+o+ö+p+r+s+ş+t+u+ü+v+y+z }
 
-window.onload = function sor();
-
 function sor(){
 swal({
   title: "Abjad Calculator",
@@ -97,7 +95,7 @@ function(isConfirm){
 });
 		};
 </script>
-	<body>
+<body onload="sor()">
 <br></br>
 <br></br>
 <center><a value="Refresh Page" onclick="sor()"><img onmouseover="Gece()" onmouseout="Gece()" src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></a></center>
