--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <html>
 <head>
 <link href='pic/favicon.ico' rel='icon' type='image/x-icon'/>
-<script
-  src="https://code.jquery.com/jquery-1.9.1.min.js"
-  integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ="
-  crossorigin="anonymous"></script>
 </head>
-	
+<script src="https://code.jquery.com/jquery-1.9.1.min.js" integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ=" crossorigin="anonymous"></script>
 <script>
 function copyToClipboard(text) {
 	if (window.clipboardData && window.clipboardData.setData) {
