--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <p id="words"></p>
 <p id="letters"></p>
 <button id="kopyala">Sonuçları Kopyala</button>
-
+	<br>
+<center><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></center>
+	
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript">
 function copyToClipboard(text) {
