--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <link href='pic/favicon.ico' rel='icon' type='image/x-icon'/>
 </head>
 <body>
-
-<textarea id="box" rows="6" cols="75"></textarea>
-<br>
-<p id="abjad"></p>
-<p id="words"></p>
-<p id="letters"></p>
-<button id="kopyala">Sonuçları Kopyala</button>
-<center><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></center>
+<table>
+  <tr>
+    <th>Abjad Value Calculator</th>
+  </tr>
+  <tr>
+    <td>
+	<textarea id="box" rows="6" cols="75"></textarea>
+	<br>
+	<p id="abjad"></p>
+	<p id="words"></p>
+	<p id="letters"></p>
+	<button id="kopyala">Sonuçları Kopyala</button></td>
+  </tr>
+  <tr>
+    <td><center><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></center></td>
+  </tr>
+</table>
 	
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript">
