--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link href='pic/favicon.ico' rel='icon' type='image/x-icon'/>
 </head>
 <body>
-<table>
+<center><table>
   <tr>
     <th>Abjad Value Calculator</th>
   </tr>
@@ -17,9 +17,9 @@
 	<button id="kopyala">Sonuçları Kopyala</button></td>
   </tr>
   <tr>
-    <td><center><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></center></td>
+    <td><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></td>
   </tr>
-</table>
+</table></center>
 	
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript">
