--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<button id="kopyala">Sonuçları Kopyala</button></td>
   </tr>
   <tr>
-    <td><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></td>
+    <td><center><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></center></td>
   </tr>
 </table></center>
 	
