--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
 <head>
 <link href='pic/favicon.ico' rel='icon' type='image/x-icon'/>
+<style>
+textarea{
+	background-color: #d4efff;
+	font-size: 12pt;
+}
+body{
+	background-color: azure;
+}
+</style>
 </head>
 <body>
 <center><table>
