--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body{
 	<p id="abjad"></p>
 	<p id="words"></p>
 	<p id="letters"></p>
-	<button id="kopyala">Sonuçları Kopyala</button></td>
+	<button id="kopyala">Sonuçları Kopyala: 123'e Tıkla</button></td>
   </tr>
   <tr>
     <td><center><a id="copyala"><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></a></center></td>
