--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body{
   </tr>
   <tr>
     <td>
-	<textarea id="box" rows="6" cols="75"></textarea>
+	<textarea placeholder="Start typing..." id="box" rows="6" cols="75"></textarea>
 	<br>
 	<p id="abjad"></p>
 	<p id="words"></p>
