--- a/index.html
+++ b/index.html
@@ -53,8 +53,56 @@ return sonuc;}
 
 function letters (string) { return string.match(/[a-z]/gim).length }
 function words(string) { return string.split(/\s+/).length }
-function abjad (string) { a = val(string,'a','1'); b = val(string,'b','2'); c = val(string,'c','3'); ç = val(string,'ç','4'); d = val(string,'d','5'); e = val(string,'e','6'); f = val(string,'f','7'); g = val(string,'g','8'); ğ = val(string,'ğ','9'); h = val(string,'h','10'); ı = val(string,'ı','11'); i = val(string,'i','12'); j = val(string,'j','13'); k = val(string,'k','14'); l = val(string,'l','15'); m = val(string,'m','16'); n = val(string,'n','17'); o = val(string,'o','18'); ö = val(string,'ö','19'); p = val(string,'p','20'); r = val(string,'r','21'); s = val(string,'s','22'); ş = val(string,'ş','23'); t = val(string,'t','24'); u = val(string,'u','25'); ü = val(string,'ü','26'); v = val(string,'v','27'); y = val(string,'y','28'); z = val(string,'z','29');
-return a+b+c+ç+d+e+f+g+ğ+h+ı+i+j+k+l+m+n+o+ö+p+r+s+ş+t+u+ü+v+y+z }
+function abjad (string) { ء = val(string,'ء','1');
+ا = val(string,'ا','1');
+آ = val(string,'آ','1');
+ٱ = val(string,'ٱ','1');
+أ = val(string,'أ','1');
+إ = val(string,'إ','1');
+ب = val(string,'ب','2');
+پ = val(string,'پ','2');
+ج = val(string,'ج','3');
+چ = val(string,'چ','3');
+د = val(string,'د','4');
+ه = val(string,'ه','5');
+ة = val(string,'ة','5');
+و = val(string,'و','6');
+ؤ = val(string,'ؤ','6');
+ز = val(string,'ز','7');
+ژ = val(string,'ژ','7');
+ح = val(string,'ح','8');
+ط = val(string,'ط','9');
+ی = val(string,'ی','10');
+ي = val(string,'ي','10');
+ئ = val(string,'ئ','10');
+ى = val(string,'ى','10');
+ک = val(string,'ک','20');
+ك = val(string,'ك','20');
+گ = val(string,'گ','20');
+ڭ = val(string,'ڭ','20');
+ل = val(string,'ل','30');
+م = val(string,'م','40');
+ن = val(string,'ن','50');
+س = val(string,'س','60');
+ع = val(string,'ع','70');
+ف = val(string,'ف','80');
+ڢ = val(string,'ڢ','80');
+ڤ = val(string,'ڤ','80');
+ص = val(string,'ص','90');
+ق = val(string,'ق','100');
+ڨ = val(string,'ڨ','100');
+ر = val(string,'ر','200');
+ش = val(string,'ش','300');
+ت = val(string,'ت','400');
+ث = val(string,'ث','500');
+خ = val(string,'خ','600');
+ذ = val(string,'ذ','700');
+ض = val(string,'ض','800');
+ظ = val(string,'ظ','900');
+غ = val(string,'غ','1000');
+
+    return ء+ا+آ+ٱ+أ+إ+ب+پ+ج+چ+د+ه+ة+و+ؤ+ز+ژ+ح+ط+ی+ي+ئ+ى+ک+ك+گ+ڭ+ل+م+ن+س+ع+ف+ڢ+ڤ+ص+ق+ڨ+ر+ش+ت+ث+خ+ذ+ض+ظ+غ
+ }
 
 $("#box").on('keyup',function(){
 	inputValue = document.getElementById("box").value;
