--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body{
   </tr>
   <tr>
     <td>
-	<textarea placeholder="Start typing..." id="box" rows="6" cols="75"></textarea>
+	<textarea placeholder="...Start typing" id="box" rows="6" cols="75"></textarea>
 	<br>
 	<p id="abjad"></p>
 	<p id="words"></p>
