--- a/index.html
+++ b/index.html
@@ -131,11 +131,14 @@ function copyToClipboard(text) {
 $("#box").on('keyup',function(){
 	inputValue = document.getElementById("box").value;
 	
-	document.getElementById("abjad").innerHTML = "Abjad Value: " + abjad(inputValue);
+	number = abjad(inputValue)
+	ebced = if(nineteen(number)){ abjad(inputValue) " = 19 × "abjad(inputValue)/19;  }else{ abjad(inputValue) }
+	
+	document.getElementById("abjad").innerHTML = "Abjad Value: " + ebced;
 	document.getElementById("letters").innerHTML = "Letters: " + letters(inputValue);
 	document.getElementById("words").innerHTML = "Words: " + words(inputValue);
 	
-	mesaj = "Abjad Value: " + if(nineteen( abjad(inputValue) )){ abjad(inputValue) " = 19 × "abjad(inputValue)/19;  }else{ abjad(inputValue) } + "\n" + "Count of letters: " + letters(inputValue) + "\n" + "Count of words: " + words(inputValue);
+	mesaj = "Abjad Value: " + abjad(inputValue)/19 + "\n" + "Count of letters: " + letters(inputValue) + "\n" + "Count of words: " + words(inputValue);
 
 	document.querySelector("#kopyala").onclick = function() {
 		var result = copyToClipboard(mesaj);
