--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ $("#box").on('keyup',function(){
 	
 	number = abjad(inputValue);
 	rslt = nineteen(number);
-	ebced = if(rslt){ abjad(inputValue) + " = 19 × " + abjad(inputValue)/19;  }else{ abjad(inputValue) }
+	ebced = if(rslt){ abjad(inputValue)  }else{ abjad(inputValue) }
 	
 	document.getElementById("abjad").innerHTML = "Abjad Value: " + ebced;
 	document.getElementById("letters").innerHTML = "Letters: " + letters(inputValue);
