--- a/index.html
+++ b/index.html
@@ -126,13 +126,9 @@ function copyToClipboard(text) {
 
 $("#box").on('keyup',function(){
 	inputValue = document.getElementById("box").value;
-	
-function nineteen(number){
-	if (number % 19 === 0) { return 1; }else{ return 0; }
-}
-	numara = abjad(inputValue);
-	rslt = nineteen(numara);
-	ebced = if(rslt){ abjad(inputValue)  }else{ abjad(inputValue) }
+
+	var number = abjad(inputValue);
+	var ebced = if (number % 19 === 0) { abjad(inputValue)  }else{ abjad(inputValue) }
 	
 	document.getElementById("abjad").innerHTML = "Abjad Value: " + ebced;
 	document.getElementById("letters").innerHTML = "Letters: " + letters(inputValue);
