--- a/index.html
+++ b/index.html
@@ -126,11 +126,8 @@ function copyToClipboard(text) {
 
 $("#box").on('keyup',function(){
 	inputValue = document.getElementById("box").value;
-
-	var number = abjad(inputValue);
-	var ebced = if (number % 19 === 0) { abjad(inputValue)  }else{ abjad(inputValue) }
 	
-	document.getElementById("abjad").innerHTML = "Abjad Value: " + ebced;
+	document.getElementById("abjad").innerHTML = "Abjad Value: " + abjad(inputValue);
 	document.getElementById("letters").innerHTML = "Letters: " + letters(inputValue);
 	document.getElementById("words").innerHTML = "Words: " + words(inputValue);
 	
