--- a/index.html
+++ b/index.html
@@ -127,9 +127,13 @@ function copyToClipboard(text) {
 $("#box").on('keyup',function(){
 	inputValue = document.getElementById("box").value;
 	
-	document.getElementById("abjad").innerHTML = "Abjad Value: " + abjad(inputValue);
-	document.getElementById("letters").innerHTML = "Letters: " + letters(inputValue);
-	document.getElementById("words").innerHTML = "Words: " + words(inputValue);
+	if (abjad(inputValue) % 19 === 0) {var ebced = abjad(inputValue) + " = 19 × " + abjad(inputValue)/19;}else{var ebced = abjad(inputValue);}
+	if (letters(inputValue) % 19 === 0) {var harf = letters(inputValue) + " = 19 × " + letters(inputValue)/19;}else{var harf = letters(inputValue);}
+	if (words(inputValue) % 19 === 0) {var kelime = words(inputValue) + " = 19 × " + words(inputValue)/19;}else{var kelime = words(inputValue);}
+  
+	document.getElementById("abjad").innerHTML = "Abjad Value: " + ebced;
+	document.getElementById("letters").innerHTML = "Letters: " + harf;
+	document.getElementById("words").innerHTML = "Words: " + kelime;
 	
 	mesaj = "Abjad Value: " + abjad(inputValue) + "\n" + "Count of letters: " + letters(inputValue) + "\n" + "Count of words: " + words(inputValue);
 
