--- a/index.html
+++ b/index.html
@@ -127,15 +127,19 @@ function copyToClipboard(text) {
 $("#box").on('keyup',function(){
 	inputValue = document.getElementById("box").value;
 	
-	if (abjad(inputValue) % 19 === 0) {var ebced = abjad(inputValue) + " = 19 × " + abjad(inputValue)/19;}else{var ebced = abjad(inputValue);}
-	if (letters(inputValue) % 19 === 0) {var harf = letters(inputValue) + " = 19 × " + letters(inputValue)/19;}else{var harf = letters(inputValue);}
-	if (words(inputValue) % 19 === 0) {var kelime = words(inputValue) + " = 19 × " + words(inputValue)/19;}else{var kelime = words(inputValue);}
+	abc = abjad(inputValue);
+	ltr = letters(inputValue);
+	wrd = words(inputValue);
+
+	if (abc % 19 === 0) {var ebced = abc + " = 19 × " + abc/19;}else{var ebced = abc);}
+	if (ltr % 19 === 0) {var harf = ltr + " = 19 × " + ltr/19;}else{var harf = ltr;}
+	if (wrd % 19 === 0) {var kelime = wrd + " = 19 × " + wrd/19;}else{var kelime = wrd;}
   
 	document.getElementById("abjad").innerHTML = "Abjad Value: " + ebced;
 	document.getElementById("letters").innerHTML = "Letters: " + harf;
 	document.getElementById("words").innerHTML = "Words: " + kelime;
 	
-	mesaj = "Abjad Value: " + abjad(inputValue) + "\n" + "Count of letters: " + letters(inputValue) + "\n" + "Count of words: " + words(inputValue);
+	mesaj = "Abjad Value: " + ebced + "\n" + "Count of letters: " + harf + "\n" + "Count of words: " + kelime;
 
 	document.querySelector("#kopyala").onclick = function() {
 		var result = copyToClipboard(mesaj);
