--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html onkeydown='startwork(event)'>
 <head>
 <title>Abjad Value Calculator</title>
+<meta content='http://abjad.quran114.org/' property='og:url'/>
+<meta content='Abjad Value Calculator' property='og:title'/>
+<meta content='Online Abjad/Gematrical/Numerical Value Calculator' property='og:description'/>
 <link href='pic/favicon.ico' rel='icon' type='image/x-icon'/>
 <style>
 textarea{
