--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
 <meta content='Online Abjad/Gematrical/Numerical Value Calculator' property='og:description'/>
 <link href='pic/favicon.ico' rel='icon' type='image/x-icon'/>
 <style>
+body{
+	background-color: azure;
+}
+table{
+	width: 95%;
+}
 textarea{
 	background-color: #d4efff;
 	font-size: 12pt;
 	direction: rtl;
 }
-body{
-	background-color: azure;
+th {font-size: x-large;}
+@media only screen and (max-width:961px) {
+textarea{font-size: 30pt;}
 }
 </style>
 </head>
