--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ textarea{
 	direction: rtl;
 }
 th {font-size: x-large;}
+p {font-size: -webkit-xxx-large;}
+button {font-size: xx-large;}
 @media only screen and (max-width:961px) {
 textarea{font-size: 30pt;}
 }
