--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@ textarea{font-size: 30pt;}
     <th>Abjad Value Calculator</th>
   </tr>
   <tr>
-    <td>
+    <center><td>
 	<textarea placeholder="...Start typing" id="box" rows="6" cols="75"></textarea>
 	<br>
 	<p id="abjad"></p>
 	<p id="letters"></p>
 	<p id="words"></p>
-	<button id="kopyala">Copy Results: Click to 123</button></td>
+	<button id="kopyala">Copy Results: Click to 123</button>
+   </td></center>
   </tr>
   <tr>
     <td><center><a id="copyala"><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></a></center></td>
