--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <style>
 	
 main {
-  margin: 20px 0;
-  padding: 10px;
+  padding: 0 10px;
 }
 
 main div {
@@ -19,13 +18,13 @@ main div {
 }
 
 main div:nth-child(1) {
-  width: 200px;
+  width: 50%;
 }
 main div:nth-child(2) {
-  width: 400px;
+  width: 50%;
 }
 main div:nth-child(3) {
-  width: 125px;
+  width: 50%;
 }
 body {
 	background-color: azure;
@@ -41,9 +40,9 @@ textarea {
 	direction: rtl;
 }
 	
-th {font-size: large;}
-p {font-size: large;}
-button {font-size: large;}
+th {font-size: initial;}
+p {font-size: initial;}
+button {font-size: initial;}
 	
 @media only screen and (max-width:361px) {
 th {font-size: x-large;}
