--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@ main div:nth-child(2) {
 }
 main div:nth-child(3) {
   width: 50%;
+  display: inline-block;
+  position: relative;
+}
+img {
+  max-height: 100%;
+  max-width: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 body {
 	background-color: azure;
