--- a/index.html
+++ b/index.html
@@ -23,25 +23,10 @@ main div:nth-child(1) {
 main div:nth-child(2) {
   width: 50%;
 }
-main div:nth-child(3) {
-  width: 50%;
-  display: inline-block;
-  position: relative;
-}
-img {
-  max-height: 100%;
-  max-width: 100%;
-  width: auto;
-  height: auto;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-}
 body {
 	background-color: azure;
+	background: url(pic/abjad_png.png);
+	background-repeat: no-repeat;
 }
 	
 table {
@@ -79,7 +64,6 @@ textarea {font-size: 30pt;}
 	<p id="words"></p>
 	<button id="kopyala">Copy Results: Click to 123</button>
    </div>
-  <div><a id="copyala"><img src="pic/abjad_png.png" alt="Ebced Hesapla" border="0"></img></a></div>
 </main>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript">
