--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@ main div:nth-child(2) {
 }
 body {
 	background-color: azure;
-	background: url(pic/abjad_png.png);
+	background-image: url(pic/abjad_png.png);
 	background-repeat: no-repeat;
+	background-position: center;
 }
 	
 table {
